<resources>
    <string name="app_name">AndroidPopularLibraries</string>
    <string name="button_text_counter1">0</string>
    <string name="button_text_counter2">0</string>
    <string name="button_text_counter3">0</string>
    <string name="text_view_text1">Счетчик 1</string>
    <string name="text_view_text2">Счетчик 2</string>
    <string name="text_view_text3">Счетчик 3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>