<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_text1" />

    <Button
        android:id="@+id/button_counter1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_counter1" />

    <TextView
        android:id="@+id/text_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_text2" />

    <Button
        android:id="@+id/button_counter2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_counter2" />

    <TextView
        android:id="@+id/text_view3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_text3" />

    <Button
        android:id="@+id/button_counter3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_counter3" />

</LinearLayout>